# image-debayer

./: CMakeLists.txt  README.md
inc/: defines.h  util.h  util.inl
src/: ColorPlaneInterp.cpp  ref.cpp
