cmake_minimum_required(VERSION 2.8)
project( ColorPlaneInterp )
option(DEBUG "Debug code" ON)
if (DEBUG)
  add_definitions(-DDEBUG)
endif()
set(OpenCV_INCLUDE_DIR "/usr/local/include/opencv")
include_directories(${OpenCV_INCLUDE_DIR})
set(SRC_INC_DIR "inc")
include_directories(${SRC_INC_DIR})
set(OpenCV_LIBS_DIR "/usr/local/lib")
link_directories(${OpenCV_LIBS_DIR})
set (OpenCV_LIBS opencv_objdetect opencv_features2d opencv_imgproc opencv_highgui opencv_core opencv_imgcodecs)
add_executable( ColorPlaneInterp src/ColorPlaneInterp.cpp src/ref.cpp )
target_link_libraries( ColorPlaneInterp ${OpenCV_LIBS} )
